# python-client

./: .fernignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json  requirements.txt  setup.py  test.py
.github/workflows/: publish-pypi.yml  publish-to-pypi.yml  python-publish.yml  release-doctor.yml
examples/: example.py
mixpeek/: client.py  exceptions.py
mixpeek.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mixpeek/endpoints/: collections.py  connections.py  embed.py  extract.py  generate.py  index.py  pipelines.py  register.py  search.py  tasks.py  tools.py
mixpeek_python.egg-info/: PKG-INFO  SOURCES.txt
scripts/: lint
src/mixpeek/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  base_client.py  client.py  environment.py  parse_client.py  version.py
src/mixpeek_sdk/: __init__.py  _base_client.py  _client.py  _response.py  _streaming.py  _types.py  _version.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_accounts.py  test_agent.py  test_assets.py  test_collections.py  test_describe.py  test_embed.py  test_features.py  test_healthcheck.py  test_index.py  test_indexes.py  test_read.py  test_recognize.py  test_search.py  test_tasks.py  test_transcribe.py
tests/custom/: test_client.py
(+208 files in other folders)
